export interface IDto {}