export interface IQuery {
    toObject(): object
}